<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_statusOfOrder"
            android:icon="@drawable/report"
            android:title="@string/status_of_my_order" />
        <item
            android:id="@+id/nav_notifications"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/email"
            android:title="@string/inbox" />
        <item
            android:id="@+id/nav_unsettleInvoices"
            android:icon="@drawable/unsettle"
            android:title="@string/unsettle_invoices" />
        <item
            android:id="@+id/nav_confirm_orders"
            android:icon="@drawable/folder"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_running_quotation"
            android:icon="@drawable/orders"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_recently_completed"
            android:icon="@drawable/book"
            android:title="@string/recently_completed" />
        <item
            android:id="@+id/nav_last_few_payment"
            android:icon="@drawable/bill"
            android:title="@string/last_few_payments" />
        <item
            android:id="@+id/nav_debtor_statement"
            android:icon="@drawable/income"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_ready_not"
            android:icon="@drawable/approval"
            android:title="@string/ready_not" />
        <item
            android:id="@+id/nav_recent_delivery"
            android:icon="@drawable/shipped"
            android:title="@string/recent_delivery" />
        <item
            android:id="@+id/nav_holiday_calander"
            android:icon="@drawable/calendar"
            android:title="@string/calender" />
        <item
            android:id="@+id/nav_certificates"
            android:icon="@drawable/diploma"
            android:title="@string/certifications" />
        <item
            android:id="@+id/nav_company_profile"
            android:icon="@drawable/resume"
            android:title="@string/company_profile" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/lock"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="@string/logout" />
    </group>

    <group
        android:id="@+id/nav_footer">
        <item
            android:title=""
            android:id="@+id/manufacture"
            app:actionLayout="@layout/bottom" />
    </group>


</menu>
