<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:layout_marginTop="150dp"
        android:src="@drawable/splashlogo" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_above="@+id/signUp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:src="@drawable/card1"
                android:adjustViewBounds="true"
                android:scaleType="fitEnd"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp">

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColorHint="#aeb0a5"
                    android:hint="@string/login_username"
                    android:layout_marginTop="10dp"
                    android:id="@+id/txtUsername"
                    android:layout_gravity="center"
                    android:inputType="textPersonName"
                    android:background="#00000000"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:id="@+id/line_username"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#c1c1c1"
                    android:layout_marginTop="5dp">

                </LinearLayout>

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColorHint="#aeb0a5"
                    android:hint="@string/login_password"
                    android:layout_marginTop="10dp"
                    android:id="@+id/txtPassword"
                    android:layout_gravity="center"
                    android:inputType="textPassword"
                    android:background="#00000000"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:id="@+id/line_password"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#c1c1c1"
                    android:layout_marginTop="5dp">

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forget_password"
                android:textSize="12sp"
                android:id="@+id/btnForgotPassword"
                android:textAlignment="center"
                android:textColorHint="#aeb0a5"
                android:layout_marginTop="240dp"
                android:textStyle="normal"/>

        </RelativeLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/btnSignIn"
        android:layout_above="@+id/signUp"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:src="@drawable/sig"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

</RelativeLayout>

