<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/changePasswordBackground"
    tools:context=".Activity_ForgotPassword">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/cardBackground"
            android:layout_height="match_parent"
            android:background="@drawable/forgot_password"
            android:layout_marginBottom="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="80dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColorHint="#aeb0a5"
                    android:hint="@string/enter_your_current_password"
                    android:id="@+id/txtCurrentPassword"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPassword"
                    android:background="#00000000"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:id="@+id/line_currentPassword"
                    android:layout_below="@+id/txtCurrentPassword"
                    android:orientation="horizontal"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#c1c1c1"
                    android:layout_marginTop="5dp">
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColorHint="#aeb0a5"
                    android:hint="@string/enter_your_new_password"
                    android:id="@+id/txtNewPassword"
                    android:layout_below="@+id/line_currentPassword"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPassword"
                    android:background="#00000000"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:id="@+id/line_newPassword"
                    android:layout_below="@+id/txtNewPassword"
                    android:orientation="horizontal"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#c1c1c1"
                    android:layout_marginTop="5dp">
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColorHint="#aeb0a5"
                    android:hint="@string/enter_your_new_password"
                    android:id="@+id/txtConfirmPassword"
                    android:layout_below="@+id/line_newPassword"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPassword"
                    android:background="#00000000"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:id="@+id/line_confirmPassword"
                    android:layout_below="@+id/txtConfirmPassword"
                    android:orientation="horizontal"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#c1c1c1"
                    android:layout_marginTop="5dp">
                </LinearLayout>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:text="@string/submit"
                    android:id="@+id/btn_submit"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/splashBackground"
                    android:layout_below="@+id/line_confirmPassword"
                    android:background="@drawable/forgot_password_button"/>

            </RelativeLayout>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>